Update shaders and streamline build configuration
Updated SPIR-V shader files for compute, raygen, and vertex shaders to align with latest changes. Improved CMake configuration by adding resource directory symlinks post-build, and cleaned up `AccelerationStructureMenagerie` implementation by fixing triangle count and removing redundant code. Adjusted `.gitignore` to include IDE and debug build files.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,5 +77,8 @@ target_link_libraries(${PROJECT_NAME}
 )
 
 set(RESOURCE_DIR "${CMAKE_SOURCE_DIR}/resources")
-# Skopiuj folder 'resource' do folderu build w czasie konfiguracji
-file(COPY ${RESOURCE_DIR} DESTINATION ${CMAKE_BINARY_DIR})
+
+add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E create_symlink
+        ${RESOURCE_DIR}
+        ${CMAKE_BINARY_DIR}/resources)
